--- a/server/views/claim/person-name.njk
+++ b/server/views/claim/person-name.njk
@@ -1,7 +1,7 @@
 {% extends 'layout.njk' %}
 
 {% from "button/macro.njk" import govukButton %}
-{% from "error-summary/macro.njk" import govukErrorSummary %}
+{% from "error-message/macro.njk" import govukErrorMessage %}
 {% from "input/macro.njk" import govukInput %}
 {% from "_breadcrumbs.njk" import breadcrumbs %}
 
@@ -14,18 +14,8 @@
 {% block content %}
 
   <div class="govuk-body">
-    <form method="POST" action="/personname">
+    <form method="POST" action="/claim/person-name">
       <h1 class="govuk-heading-xl">Create a person record</h1>
-
-      {% if model.errors.length !== 0 %}
-
-        {{ govukErrorSummary({
-          titleText: "There is a problem",
-          errorList: model.errors
-        }) }}
-
-      {% endif %}
-
       <p class="govuk-body-l">What is your name?</p>
       {{ govukInput(model.firstName) }}
       {{ govukInput(model.lastName) }}
